--- a/highscores.html
+++ b/highscores.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>High Scores</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-  </head>
+    <head>
+        <title>High Scores</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    </head>
 
-  <body>
+    <body>
     <section>
         <h1>High Scores</h1>
         <ol id="highscores"></ol>
@@ -16,4 +16,5 @@
         <button id ="clear-highscores">Clear Highscores</button>
     </section>
     <script src="./assets/js/highscores.js"></script>
-  </body>
+    </body>
+</html>
