--- a/highscores.html
+++ b/highscores.html
@@ -8,13 +8,13 @@
     </head>
 
     <body>
-    <section>
+    <main>
         <h1>High Scores</h1>
         <ol id="highscores"></ol>
 
         <a href="index.html"><button>Go Back</button></a>
         <button id ="clear-highscores">Clear Highscores</button>
-    </section>
+    </main>
     <script src="./assets/js/highscores.js"></script>
     </body>
 </html>
