added README file and added comments

--- a/highscores.html
+++ b/highscores.html
@@ -10,6 +10,7 @@
     <body>
     <main>
         <h1>High Scores</h1>
+         <!--Ordered list in which to dynamically append highscore results as listed elements-->
         <ol id="highscores"></ol>
 
         <a href="index.html"><button>Go Back</button></a>
